# ComputerDesign

./: .gitignore  README.md
Part1/1_GateLogic/: And.hdl  DMux4Way.hdl  DMux8Way.hdl  Dup16.hdl  Dup16.tst  Mux.hdl  Mux4Way16.hdl  Mux8Way16.hdl  Not.hdl  Or16.hdl  Xor.hdl
Part2/1_VMTranslator/: CMakeLists.txt
Part2/1_VMTranslator/examples/MemoryAccess/BasicTest/: BasicTest.asm
Part2/1_VMTranslator/examples/MemoryAccess/StaticTest/: StaticTest.asm
Part2/1_VMTranslator/examples/StackArithmetic/SimpleAdd/: SimpleAdd.asm
Part2/1_VMTranslator/examples/StackArithmetic/StackTest/: StackTest.asm
Part2/1_VMTranslator/include/: code_writer.h  operation.h  parser.h  translation.h  translator.h
Part2/1_VMTranslator/src/: code_writer.cc  main.cc  parser.cc  translation.cc  translator.cc
Part2/Compiler/: CMakeLists.txt  README.md
Part2/Compiler/examples/: simple.jack
Part2/Compiler/examples/ArrayTest/: Main.xml
Part2/Compiler/examples/ConvertToBin/: Main.vm
Part2/Compiler/examples/Invalid/: badIdentifier1.jack  badIdentifier2.jack  nonTerminatedString.jack
Part2/Compiler/examples/Simple/: commentsAndStrings.jack  commentsAndStrings.xml  oneLineComment.jack  statements.jack  subroutineDec.jack  varStatement.jack
Part2/Compiler/include/: compilation_engine.h  exceptions.h  keyword.h  scope_list.h  segment.h  symbol.h  symbol_table.h  token_type.h  tokenizer.h  util.h  vm_writer.h
Part2/Compiler/src/: compilation_engine.cc  exceptions.cc  keyword.cc  main.cc  scope_list.cc  symbol_table.cc  tokenizer.cc  vm_writer.cc
Part2/Compiler/tools/: xmlComparer.py
(+91 files in other folders)
